@startuml

center header
Main Entity-Relationship Diagram for SDR
endheader

hide circle
hide empty members

!define pk(x) x <b>(PK)</b>
!define fk(x) x <b>(FK)</b>

skinparam class {
	backgroundColor<<external>> LightCyan
	backgroundColor<<incomplete>> LightPink
}

' ##### Customer Aggregate

package "Customer Aggregate" {
    entity Customer <<incomplete>> {
        pk(id)
        Name
        Email
    }

    entity Address <<incomplete>> {
        fk(Customer)
        Name
        Street
        Town
        Postcode
    }
}
Customer ||--o{ Address




' ##### Order Aggregate

package "Order Aggregate" {
    entity Order {
        pk(OrderId)
        fk(Customer)
        State
        Total
    }

    entity OrderItem {
        pk(OrderItemId)
        fk(Order)
        SkuCode
        SkuTitle
        Quantity
        LineTotal
    }
}

Order ||--|{ OrderItem





' ##### Product Aggregate

package "Product Aggregate" {
    entity Sku {
        pk(code)
        Title
        Image
        Price
    }
}




' ##### Aggregate Links

Customer ||-o{ Order

@enduml
